E-commerce da Kenzie V2

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                     </div>
 
                     <div>
-                    <p class="product-description">Cadeira Gamer Giratória Red System com Apoio Cabeça Frisokar Preta
+                    <p class="product-description">
+                    Cadeira Gamer Giratória Red System com Apoio Cabeça Frisokar Preta
                     </p>
 
 
