--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./Css/style.css">
 
         <title>Document</title>
     </head>
